--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,18 @@ jobs:
               uses: actions/checkout@v3
               with:
                 repository: "frenchfrysays3/my-custom-game"
+
+            - name: Install wget
+              run: sudo apt-get install wget
+
+            - name: Download the CMakeLists.txt file
+              run: wget https://raw.githubusercontent.com/frenchfrysays3/My-Custom-Game/refs/heads/main/CMakeLists.txt
+
     buildOnLinux:
         runs-on: ubuntu-latest
         needs: setupJob
         steps:
-            - name: Setup Cmake version 3.10
+            - name: Setup Cmake version 4.0.2
               uses: jwlawson/actions-setup-cmake@v2
               with:
                 cmake-version: '4.0.2'
