--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,22 +7,12 @@ on:
             - "*"
 
 jobs:
-    setupJob:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Go to where code is
-              run: cd ..
-
-            - name: Install curl
-              run: sudo apt-get install curl -y
-
-            - name: Download the CMakeLists.txt file
-              run: curl -o CMakeLists.txt https://raw.githubusercontent.com/frenchfrysays3/My-Custom-Game/refs/heads/main/CMakeLists.txt
-
     buildOnLinux:
         runs-on: ubuntu-latest
-        needs: setupJob
         steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
             - name: Setup Cmake version 4.0.2
               uses: jwlawson/actions-setup-cmake@v2
               with:
