--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,6 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                 name: game-files
-                path: build/*.exe, build/*.dll
+                path: build/RelWithDebInfo/*.exe, build/RelWithDebInfo/*.dll
                 if-no-files-found: warn
                 retention-days: 90
